--- a/FormFactory/package.json
+++ b/FormFactory/package.json
@@ -1,8 +1,9 @@
 {
   "name": "better-form-factory",
-  "version": "1.0.1",
+  "version": "1.0.6",
   "description": "This is a wrapper class for reactstrap's Form that let's you easily create custom forms.",
   "main": "FormFactory.js",
+  "homepage": "https://github.com/ant35/better-tools/tree/master/FormFactory",
   "keywords": [
     "reactstrap",
     "form",
@@ -12,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
